manifests/landing/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: landing-http-redirect
  namespace: landing
spec:
  parentRefs:
    - name: external
      namespace: infra
      sectionName: http
  hostnames: [qtlab.dev]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: landing
  namespace: landing
spec:
  parentRefs:
    - name: external
      namespace: infra
      sectionName: https
  hostnames: [qtlab.dev]
  rules:
    - backendRefs:
        - name: landing
          port: 80
